--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
 	},
 	"dependencies": {
 		"@nextui-org/button": "^2.0.32",
+		"@nextui-org/card": "^2.0.29",
 		"@nextui-org/code": "^2.0.28",
+		"@nextui-org/image": "^2.0.28",
 		"@nextui-org/input": "^2.2.0",
 		"@nextui-org/kbd": "^2.0.29",
 		"@nextui-org/link": "^2.0.30",
+		"@nextui-org/listbox": "^2.1.20",
 		"@nextui-org/navbar": "^2.0.31",
+		"@nextui-org/react": "^2.4.0",
 		"@nextui-org/snippet": "^2.0.36",
 		"@nextui-org/switch": "^2.0.29",
 		"@nextui-org/system": "2.2.0",
@@ -47,6 +51,7 @@
 		"react-dom": "18.3.1",
 		"tailwind-variants": "^0.1.20",
 		"tailwindcss": "3.4.3",
-		"typescript": "5.0.4"
+		"typescript": "5.0.4",
+		"zustand": "^4.5.2"
 	}
 }
